# holdings-emoney-assistant

./: .gitignore  AGENTS.md  DEMO_QUICKSTART.md  ENGINEERING_HANDOFF_CHECKLIST.md  FREEZE_NOTES.md  OPERATOR_RUNBOOK.md  PRODUCT.md  PROJECT_STATE.md  README.md  RESUME_FROM_FREEZE.md  WORKSPACE_MANIFEST.md  emoney-browser-helper.test.cjs  emoney-browser-helper.ts  freeze_notes.md  holdings-csv-parser.test.cjs  holdings-csv-parser.ts  holdings-schema.ts  ledger-styles.ts  main.ts  package-lock.json  package.json  paste-conductor.test.cjs  paste-conductor.ts  review-export-surface.test.cjs  review-export-surface.ts  tsconfig.test.json
scripts/: build-demo.mjs  build-portable.mjs  serve-demo.mjs  test-portable.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
