[package]
name = "holdings-emoney-assistant"
version = "0.1.0"
description = "Local-only holdings review and guided eMoney entry assistant"
authors = ["Cyril"]
edition = "2021"

[lib]
name = "holdings_emoney_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

